Minor changes in HTML and create basic CSS structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1 id="title">Movies and Series Survey Form</h1>
-      <p id="description">Thank you for taking the time to help us see your sense of cinema and improve the platform</p>
+      <p id="description">Thank you for taking the time to help us see your thoughts and improve the platform</p>
     </header>
 
     <form id="survey-form">
@@ -44,24 +44,24 @@
 
       <fieldset>
         <p>What genres you like the most?</p>
-          <label><input type="radio" name="genre" value="1" /> Drama</label>
-          <label><input type="radio" name="genre" value="2" /> Animation</label>
-          <label><input type="radio" name="genre" value="3" /> Thriller / Horror</label>
-          <label><input type="radio" name="genre" value="4" /> Romance</label>
-          <label><input type="radio" name="genre" value="5" /> Comedy</label>
-          <label><input type="radio" name="genre" value="6" /> Adventure / Fantasy</label>
-          <label><input type="radio" name="genre" value="7" /> Sci-Fi</label>
-          <label><input type="radio" name="genre" value="8" /> Mystery</label>
+          <label><input class="inline" type="radio" name="genre" value="1" /> Drama</label>
+          <label><input class="inline" type="radio" name="genre" value="2" /> Animation</label>
+          <label><input class="inline" type="radio" name="genre" value="3" /> Thriller / Horror</label>
+          <label><input class="inline" type="radio" name="genre" value="4" /> Romance</label>
+          <label><input class="inline" type="radio" name="genre" value="5" /> Comedy</label>
+          <label><input class="inline" type="radio" name="genre" value="6" /> Adventure / Fantasy</label>
+          <label><input class="inline" type="radio" name="genre" value="7" /> Sci-Fi</label>
+          <label><input class="inline" type="radio" name="genre" value="8" /> Mystery</label>
       </fieldset>
 
       <fieldset>
         <p>What are the streaming platforms that you use?</p>
-        <label><input name="platform" type="checkbox" value="1" /> Disney Plus</label>
-        <label><input name="platform" type="checkbox" value="2" /> Netflix</label>
-        <label><input name="platform" type="checkbox" value="3" /> HBO Max</label>
-        <label><input name="platform" type="checkbox" value="4" /> Hulu</label>
-        <label><input name="platform" type="checkbox" value="5" /> Prime Video</label>
-        <label><input name="platform" type="checkbox" value="6" /> Other (you can mention it at below)</label>
+        <label><input class="inline" name="platform" type="checkbox" value="1" /> Disney Plus</label>
+        <label><input class="inline" name="platform" type="checkbox" value="2" /> Netflix</label>
+        <label><input class="inline" name="platform" type="checkbox" value="3" /> HBO Max</label>
+        <label><input class="inline" name="platform" type="checkbox" value="4" /> Hulu</label>
+        <label><input class="inline" name="platform" type="checkbox" value="5" /> Prime Video</label>
+        <label><input class="inline" name="platform" type="checkbox" value="6" /> Other (you can mention it at below)</label>
       </fieldset>
 
       <fieldset>
