Some visual and content improvements

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
       </fieldset>
 
       <fieldset>
-        <p>What genres you like the most?</p>
-          <label><input class="inline" type="radio" name="genre" value="1" /> Drama</label>
-          <label><input class="inline" type="radio" name="genre" value="2" /> Animation</label>
-          <label><input class="inline" type="radio" name="genre" value="3" /> Thriller / Horror</label>
-          <label><input class="inline" type="radio" name="genre" value="4" /> Romance</label>
-          <label><input class="inline" type="radio" name="genre" value="5" /> Comedy</label>
-          <label><input class="inline" type="radio" name="genre" value="6" /> Adventure / Fantasy</label>
-          <label><input class="inline" type="radio" name="genre" value="7" /> Sci-Fi</label>
-          <label><input class="inline" type="radio" name="genre" value="8" /> Mystery</label>
+        <p>What genre you like the most?</p>
+        <label><input class="inline" type="radio" name="genre" value="1" /> Drama</label>
+        <label><input class="inline" type="radio" name="genre" value="2" /> Animation</label>
+        <label><input class="inline" type="radio" name="genre" value="3" /> Thriller / Horror</label>
+        <label><input class="inline" type="radio" name="genre" value="4" /> Romance</label>
+        <label><input class="inline" type="radio" name="genre" value="5" /> Comedy</label>
+        <label><input class="inline" type="radio" name="genre" value="6" /> Adventure / Fantasy</label>
+        <label><input class="inline" type="radio" name="genre" value="7" /> Sci-Fi</label>
+        <label><input class="inline" type="radio" name="genre" value="8" /> Mystery</label>
       </fieldset>
 
       <fieldset>
@@ -72,5 +72,6 @@
       
       <input id="submit" type="submit" value="Submit" />
     </form>
+    <div></div>
   </body
 </html>
